--- a/E1/Authentification/templates/accueil.html
+++ b/E1/Authentification/templates/accueil.html
@@ -6,4 +6,13 @@
 <p>
   <a href="{% url 'import_formateurs' %}">Importer un fichier de formateurs</a>
 </p>
+<p>
+    <a href="{% url 'importer_etudiants_source' %}">Inscription etudiant</a>
+  </p>
+  <p>
+    <a href="{% url 'commentaires' %}">Commentaires cours</a>
+  </p>
+  <p>
+  <a href="{% url 'stats_vue' %}">Statistiques des cours</a>
+</p>
 {% endblock %}
